# hornet

./: README.md
hornetsnest/: CMakeLists.txt
hornetsnest/include/Static/KCore/: CoreNumbers.cuh
hornetsnest/src/Static/KCore/: CoreNUmbers.cu  CoreNumbers.cu  KCore.cu
hornetsnest/src/Static/TriangleCounting/: triangle.cu
hornetsnest/test/: CoreNumbers.cu
